2009-08-07  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added extension point support for page request process actions.

	Removed "ResdocFinalizer".

	Added extension point support for input wrappers.

	Removed PropertyObjectManager.

2009-08-05  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added page request output resource extension points.

2009-07-30  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added page request extension points.

	Refactored page configuration in order to prepare for extension
	point support.

	Added page flow step extension points.

	Removed caching of page name to page flow name map.

2009-07-30  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed FlowStepActionFactory.

	Support for page flow variant extension points.

2009-07-27  Martin Leidig  <mleidig@schlund.de>

	Fixed possible deadlock within SessionEndNotificator when
	one thread adds a SessionListener after getting a lock to an
	application object, while another thread is invalidating
	the session and calls a registered SessionListener, which itself
	tries to lock the same application object.

2009-07-24  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added code to load the configuration for a module application context.

	Added more code for page flow extension points.

	Made Pustefix Context available and register request and session
	scope in module's application context.

2009-07-23  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added base classes for extension point support and very first part
	of the extension points for page flows.

2009-07-16  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed pustefix-osgi-spring-dm bundle and moved classes to 
	pustefix-core.

	Support for file: URIs

	Removed code for building pustefix-core-*-data.jar.

2009-07-10  Sebastian Marsching <sebastian.marsching@1und1.de>

	Introduced pustefixcore scheme for access to core XML files.
